# primes

./: .gitignore  Cargo.toml  README.md  build.rs  make_screenshots.sh
.github/workflows/: release.yaml
assets/: shader.wgsl
src/: assets.rs  camera.rs  dev.rs  full_screen.rs  lib.rs  main.rs  primes.rs
src/game/: instanced.rs  mod.rs
src/loading/: mod.rs
src/splash_screen/: mod.rs
wasm/: index.html
