[package]
name = "primes"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev = ["dep:iyes_perf_ui"]

[dependencies]
bevy = "0.14"
bevy_asset_loader = { version = "0.21.0", default-features = false }
iyes_perf_ui = { version = "0.3.0", optional = true }
bytemuck = "1.16.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
